# SNode.C-Book

./: .gitignore  CHAPTER-REFINEMENT-CHECKLIST.md  CMakeLists.txt  FINAL-ENDGAME-CHANGELOG.md  FINAL-PACKAGE-CLEANUP-NOTE.md  GLOBAL-REFINEMENT-REPORT.md  MINIGATEWAY-SOURCE-AUDIT.md  Makefile  PACKAGE-CONTENTS.txt  PART-XII-EVENT-DRIVEN-REVISION-NOTE.md  PART-XII-FINAL-CONSISTENCY-FIXES.md  PART-XII-RESTRUCTURE-NOTE.md  PART-XII-SOURCE-OF-TRUTH-NOTE.md  PROPOSAL-ALIGNMENT-NOTE.md  README-cmake-listing-highlighting.md  README.md  REPETITION-SHRINK-PASS-2-REPORT.md  REPETITION-SHRINK-PASS-REPORT.md  SOURCE-VERSION.md  STRUCTURE.md  Status against the external publisher-style review.md  book-files-existing-only.txt  book-files.txt  full_pdf_package_qa_report.md  metadata.yaml  minigateway_naming_cleanup.patch  snode.md
assets/: CMakeLists.txt
backmatter/: further-reading.md
chapters/: 01-why-snodec-exists.md  02-preparing-your-environment.md  03-your-first-working-program-the-echo-pair.md  04-reading-the-codebase-with-confidence.md  05-the-mental-model-of-snodec.md  06-core-runtime-and-event-processing.md  07-layers-in-practice-network-transport-connection-application.md  08-socket-addresses-and-address-semantics.md  09-servers-clients-and-connections.md  10-ipv4-and-ipv6-as-the-primary-teaching-path.md  11-unix-domain-sockets.md  12-bluetooth-in-snodec-rfcomm-and-l2cap.md  13-writing-socketcontext-classes-well.md  14-writing-socketcontextfactory-classes-well.md  15-building-the-same-protocol-over-different-lower-layers.md  16-configuration-philosophy-in-snodec.md  17-application-and-instance-configuration-in-detail.md  18-logging-diagnostics-and-runtime-introspection.md  19-tls-across-the-framework.md  20-timeouts-retries-and-failure-modes.md  21-the-http-layer.md  22-the-express-like-framework.md  23-server-sent-events-and-real-time-http.md  24-websocket-and-protocol-upgrade.md  25-mqtt-support-in-snodec.md  26-mqtt-over-websocket.md  27-designing-iot-systems-with-multiple-protocols.md  28-database-support-and-application-state.md  29-learning-from-the-applications-in-src-apps.md  30-from-applications-to-systems.md  31-mqttsuite-as-a-reference-ecosystem.md  32-cmake-components-and-linking-strategy.md  33-deployment-on-linux-and-openwrt.md  34-testing-debugging-and-benchmarking.md  35-architectural-judgment-choosing-the-right-layer-and-boundary.md  36-extending-the-framework-safely.md  37-a-complete-guided-project.md  37-building-minigateway.md  38-extending-testing-and-deploying-minigateway.md  38-where-to-go-next.md  (+2 more)
ci/: build-book-package.sh  build-companion-examples.sh  check-source-hygiene.sh  run-behavior-smoke-tests.py  run-behavior-smoke-tests.sh
companion/examples/: CMakeLists.txt  README.md
companion/examples/HttpUpgrade-Client/: CMakeLists.txt  main.cpp
companion/examples/HttpUpgrade-Server/: CMakeLists.txt
companion/examples/LineProtocol-Client/: CMakeLists.txt  LineCommandClientContext.cpp  LineCommandClientContext.h  LineCommandClientContextFactory.h  README.md  main.cpp
companion/examples/LineProtocol-Server/: CMakeLists.txt  LineCommandServerContext.cpp  LineCommandServerContextFactory.h  README.md  main.cpp
companion/examples/MQTT-ClientRole/: CMakeLists.txt  README.md  SensorClient.cpp  SensorClient.h
companion/examples/MariaDB-Minimal/: CMakeLists.txt  README.md  main.cpp
companion/examples/MiniGateway/: CMakeLists.txt  ConfigSections.cpp  ConfigSections.h  Measurement.h  MeasurementJsonCodec.h  MeasurementModel.cpp  MeasurementModel.h  MiniGatewayMqtt.cpp  MiniGatewayMqtt.h  MiniGatewayMqttClient.cpp  MiniGatewayMqttClient.h  MiniGatewayMqttSocketContextFactory.h  MiniGatewayWeb.cpp  MiniGatewayWeb.h  README.md  SocketStateReporter.cpp  SocketStateReporter.h  main.cpp
companion/examples/MiniGateway-Base/: ConfigSections.h  MeasurementBus.cpp  MeasurementState.cpp  MeasurementState.h  MiniGatewayMqtt.cpp  README-BUILD.md  main.cpp
companion/examples/MiniGateway-Extended/: CMakeLists.txt  ConfigSections.cpp  ConfigSections.h  Measurement.h  MeasurementBus.h  MeasurementJsonCodec.cpp  MeasurementJsonCodec.h  MeasurementModel.h  MeasurementUnixSocketContext.cpp  MeasurementUnixSocketContext.h  MeasurementUnixSocketContextFactory.cpp  MeasurementUnixSocketContextFactory.h  MeasurementUnixSocketServer.cpp  MeasurementUnixSocketServer.h  MiniGatewayMqtt.h  MiniGatewayMqttClient.h  MiniGatewayMqttSocketContextFactory.cpp  MiniGatewayMqttSocketContextFactory.h  MiniGatewaySocketContextFactory.cpp  MiniGatewayWeb.cpp  MiniGatewayWeb.h  README.md  SocketStateReporter.h  main.cpp
companion/examples/SSE-EventSource-Client/: CMakeLists.txt  README.md  main.cpp
companion/examples/SSE-Server/: README.md  main.cpp
companion/examples/WebSocket-Echo-ClientSubprotocol/: CMakeLists.txt  EchoClientFactory.cpp  EchoClientFactory.h  README.md
companion/examples/WebSocket-Echo-ServerSubprotocol/: CMakeLists.txt  EchoServer.h  EchoServerFactory.cpp  EchoServerFactory.h  README.md
examples/: CMakeLists.txt  README.md
examples/HttpUpgrade-Client/: CMakeLists.txt  README.md  main.cpp
examples/HttpUpgrade-Server/: CMakeLists.txt  README.md  main.cpp
examples/LineProtocol-Client/: LineCommandClientContext.cpp  README.md
examples/LineProtocol-Server/: LineCommandServerContext.cpp  LineCommandServerContext.h  README.md
examples/MQTT-ClientRole/: CMakeLists.txt  README.md  SensorClient.cpp  SensorClient.h
examples/MariaDB-Minimal/: CMakeLists.txt  README.md  main.cpp
examples/MiniGateway-Base/: CMakeLists.txt  Measurement.h  MiniGatewayMqtt.cpp  README-BUILD.md  main.cpp
examples/MiniGateway-Extended/: CMakeLists.txt  MeasurementUnixSocketContext.cpp  MeasurementUnixSocketContextFactory.cpp  MiniGatewaySocketContextFactory.h  README-BUILD.md  main.cpp
examples/SSE-EventSource-Client/: CMakeLists.txt  README.md  main.cpp
examples/SSE-Server/: CMakeLists.txt  README.md  main.cpp
examples/WebSocket-Echo-ClientSubprotocol/: CMakeLists.txt  EchoClient.cpp  EchoClient.h  README.md
examples/WebSocket-Echo-ServerSubprotocol/: EchoServer.cpp
(+162 files in other folders)
